--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Nome rosa azzurro</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
 
-  <script src="js/script.js" charset="utf-8"></script>
+  <body>
+    <h1>Ciao <span id="nome-colore"></span></h1>
+    
+    <script src="js/script.js" charset="utf-8"></script>
   </body>
 </html>
